--- a/templates/super_admin/site.html
+++ b/templates/super_admin/site.html
@@ -1,4 +1,4 @@
-{% extends "admin/base.html" %}
+{% extends "super_admin/base.html" %}
 {% block content %}
     <div class="boloContainer" id="vCollections">
         <div class="ui breadcrumb">
